--- a/phase2/app/src/main/res/layout/activity_hangman.xml
+++ b/phase2/app/src/main/res/layout/activity_hangman.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="164dp"
-        android:layout_height="39dp"
+        android:layout_width="267dp"
+        android:layout_height="42dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/renner"
         android:text="Hangman"
@@ -33,8 +33,8 @@
 
     <TextView
         android:id="@+id/wordBlanks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="29dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/renner"
         android:text="_ _ _ _ s a s _ "
@@ -42,6 +42,7 @@
         android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
@@ -74,7 +75,7 @@
             android:id="@+id/b1"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Q"
@@ -84,7 +85,7 @@
             android:id="@+id/b2"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="W"
@@ -94,7 +95,7 @@
             android:id="@+id/b3"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="E"
@@ -104,7 +105,7 @@
             android:id="@+id/b4"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="R"
@@ -114,7 +115,7 @@
             android:id="@+id/b5"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="T"
@@ -124,7 +125,7 @@
             android:id="@+id/b6"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Y"
@@ -134,7 +135,7 @@
             android:id="@+id/b7"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="U"
@@ -144,7 +145,7 @@
             android:id="@+id/b8"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="I"
@@ -154,7 +155,7 @@
             android:id="@+id/b9"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="O"
@@ -164,7 +165,7 @@
             android:id="@+id/b10"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="P"
@@ -184,7 +185,7 @@
             android:id="@+id/b11"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="A"
@@ -194,7 +195,7 @@
             android:id="@+id/b12"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="S"
@@ -204,7 +205,7 @@
             android:id="@+id/b13"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="D"
@@ -214,7 +215,7 @@
             android:id="@+id/b14"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="F"
@@ -224,7 +225,7 @@
             android:id="@+id/b15"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="G"
@@ -234,7 +235,7 @@
             android:id="@+id/b16"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="H"
@@ -244,7 +245,7 @@
             android:id="@+id/b17"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="J"
@@ -254,7 +255,7 @@
             android:id="@+id/b18"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="K"
@@ -264,7 +265,7 @@
             android:id="@+id/b19"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="L"
@@ -285,7 +286,7 @@
             android:id="@+id/b20"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Z"
@@ -295,7 +296,7 @@
             android:id="@+id/b21"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="X"
@@ -305,7 +306,7 @@
             android:id="@+id/b22"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="C"
@@ -315,7 +316,7 @@
             android:id="@+id/b23"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="V"
@@ -325,7 +326,7 @@
             android:id="@+id/b24"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="B"
@@ -335,7 +336,7 @@
             android:id="@+id/b25"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="N"
@@ -345,7 +346,7 @@
             android:id="@+id/b26"
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/menu_blue"
             android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="M"
