--- a/phase2/app/src/main/res/values/colors.xml
+++ b/phase2/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="go_green">#00E676</color>
-    <color name="menu_blue">#2B87D1</color>
+    <color name="menu_blue">#4888CE</color>
     <color name="error_red">#CE2636</color>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
